Alter title somewhat

--- a/_posts/2018-05-04-Version-1.1-released.markdown
+++ b/_posts/2018-05-04-Version-1.1-released.markdown
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "HyperSQL database engine supported"
+title:  "HyperSQL database support added"
 date:   2018-05-04 08:00:00 CET
 categories: release features hsqldb
 ---
